# Programmatic-Multi-Agent-Orchestration

./: .coverage  .gitignore  README.md  main.py  pyproject.toml  pytest.ini  start.ps1  start.py  start.sh  test_singleton.py
api/: main.py  routes.py  schemas.py
benchmarks/: __init__.py  plotting.py  run.py  suite.py
examples/: demo.py  notebook.ipynb
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: AboutPage.jsx  Chat.jsx  ChatInput.jsx  ChatMessage.jsx  CodePanel.jsx  ExpertCards.jsx  FlowGraph.jsx  Hero.jsx  Layout.jsx  LoadingIndicator.jsx  Markdown.jsx  MissionControl.jsx  PipelineAnimation.jsx  PromptCards.jsx  Sidebar.jsx  TokenChart.jsx  VisualDNA.jsx
frontend/src/styles/: codeTheme.js
src/agents/: base.py  orchestrator.py  registry.py  router.py  synthesizer.py  tools.py
src/agents/experts/: generic.py
src/agents/legacy/: __init__.py  router.py  synthesizer.py
src/core/: agents.py  config.py  memory.py  registry.py  sandbox.py  scoring.py  state.py  tracing.py
src/graph/: builder.py
src/llm/: prompts.py  providers.py
src/utils/: cache.py  code_analyzer.py  embeddings.py  logging.py  memory.py  metrics.py  script_bank.py  tracing.py
tests/: test_agents.py  test_api_routes.py  test_benchmark_plotting.py  test_benchmark_repeats.py  test_graph.py  test_groq.py  test_integration.py  test_memory.py  test_model_fallback.py  test_orchestrator.py  test_orchestrator_candidate_search.py  test_p2_features.py  test_p3_features.py  test_registry.py  test_registry_metadata.py  test_sandbox.py  test_semantic_atoms.py
ui/: app.py
ui/components/: visualization.py
